style.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}

/*
    2. Remove default margin
  */
* {
  margin: 0;
}

/*
    Typographic tweaks!
    3. Add accessible line-height
    4. Improve text rendering
  */


body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  width: 100vw;
  height: 100vh;
  font-family: "Roboto-Regular", sans-serif;
}

/*
    5. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/*
    6. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}

/*
    7. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;

}

/*
    8. Create a root stacking context
  */
#root,
#__next {
  isolation: isolate;
}

/**************************************************/
ul {
  list-style-type: none;
  padding: 0;
}



/* Header > toolbar > bookshelf*/
.wrapper {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  padding: 10px;
  gap: 15px;
  margin: 15px;
}

.main {
  grid-column: 1/4;
  grid-row: 1/3;

  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 4rem 1fr;
  gap: 15px;



}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  box-shadow: 0 0 5px rgb(83, 165, 180);
  color: black;
  font-weight: bold;
  background-color: rgb(232, 244, 245);
  cursor: pointer;

}

button:hover {
  background-color: rgb(165, 151, 168);
}

.toolbar {
  border: 1px solid rgba(0, 0, 0, 0.199);
  background-color: rgba(60, 182, 204, 0.507);
  border-radius: 5px;
  grid-column: 1/2;
  grid-row: 1/2;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;

}

.shelf {
  grid-column: 1/2;
  grid-row: 2/4;
  display: grid;
  grid-template-columns: repeat(auto-fit, 150px);
  grid-template-rows: repeat(auto-fill, 250px);
  grid-auto-flow: row;
  gap: 15px;
  margin: 5px;

}

.book {
  position: relative;
  border: 0.5px solid transparent;
  box-shadow: 0 0 10px rgb(60, 162, 180);
  border-radius: 10px;
  padding: 30px;
  cursor: pointer;

  width: 150px;
  height: 250px;
}

.remove {
  position: absolute;
  border-radius: 50px;
  width: 18px;
  height: 18px;

  bottom: -30px;
  left: 50%;
  transform: translate(-50%);
}

.remove:hover {
  background-image: url(resources/x-mark-16.png);
  background-color: transparent;
  opacity: .6;
}

.title {
  font-weight: bolder;
  font-size: 1.3rem;
}

.pageCount {
  font-weight: lighter;
  font-style: italic;
  font-size: .8rem;
  margin-top: 40px;
}


.bookPopup {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 1.5px solid black;
  border-radius: 10px;
}

::backdrop {

  background-image: linear-gradient(45deg,
      magenta,
      rebeccapurple,
      dodgerblue,
      green);
  opacity: 0.75;
}


form {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(autofit, 1fr);
  justify-content: center;
  justify-items: start;
  align-items: center;
  gap: 8px;
  padding: 10px;

}

#msg {
  justify-self: center;
  font-size: 1.5rem;
  margin-bottom: 3px;
}

.buttons {
  display: flex;
  width: 100%;
  justify-content: space-evenly;
  margin-top: 10px;

}

/* Read checkbox */

.check {
  position: relative;
}

.check::after {
  position: absolute;
  content: "";
  background-image: url(resources/unchecked.svg);
  background-size: cover;
  width: 24px;
  height: 24px;

  right: 10px;
  bottom: 10px;

}



.check.complete::after {
  background-image: url(resources/checked.svg);
}

.complete {
  background-image: linear-gradient(45deg,
      magenta,
      rebeccapurple,
      dodgerblue,
      green);
  opacity: 0.8;

}

:focus {
  outline: none;
  border: 1px solid transparent;
  box-shadow: 0 0 20px rgb(60, 162, 180);
}

form>p>*:focus {
  box-shadow: 0 0 5px rgb(60, 162, 180);
}

.buttons:focus {

  box-shadow: 0 0 5px rgb(60, 162, 180);
}

